@@ -1,3 +1,7 @@
+Tue Dec 11 15:27:15 CET 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/xsltutils.c: fixed a problem with the debuuger interface.
+
 Fri Dec  7 15:48:48 CET 2001 Daniel Veillard <daniel@veillard.com>
 
 	* configure.in: preparing 1.0.9
